on tools intro section and end of the AT processes in context

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -8,18 +8,14 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
     -   [Research Questions - April
         2024](#research-questions---april-2024)
     -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
-    -   [Detailed description of dimensions of game making
-        activity](#detailed-description-of-dimensions-of-game-making-activity)
-        -   [Illustrative vignette one participants activity indicating
-            general activity of
-            participants](#illustrative-vignette-one-participants-activity-indicating-general-activity-of-participants)
+    -   [Analysis of dimensions of game making activity using 3GAT
+        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
         -   [Description of interacting systems of activity illustrated
             using the
             vignette](#description-of-interacting-systems-of-activity-illustrated-using-the-vignette)
@@ -32,11 +28,12 @@ title: 4. Exploration of the Formative Learning Design Process
             -   [Smaller objectives and actions - Implementing discrete
                 code and design
                 structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
-    -   [Conflicts and design tensions experienced by participants and
-        facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Tensions due to lack of access and familiarity to game
-        programming
-        tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
+            -   [Applying activity theory to surface contradictions and
+                design tensions experienced by participants and
+                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
+    -   [Contradictions involving the use of game programming and asset
+        authoring
+        tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
         -   [Design choices of the starter game
             template](#design-choices-of-the-starter-game-template)
             -   [Structural design of the game
@@ -87,7 +84,6 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
         -   [Link to next chapter](#link-to-next-chapter)
-
 # Exploration of the Formative Learning Design Process
 
 ## Research Questions - April 2024
@@ -317,7 +313,9 @@ While the broad aim of making a game to share is tacitly agreed through particip
 In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. In the vignette above, I draw the participants attention to the showcasing of their games to an external audience. Toby begins the session playing his own game. During the course of this session he invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed.
 
 EDIT WITH ABOVE
-The purpose of this vignette is to illustrate some of the key features of the overall game making activity in context. The following vignette, consisting of extracts of participant activity over twenty minutes of a session in P2 (see below), shows activity happening at different scopes of activity. The participant, a child Toby, has been working independently on the design of a platform game for the first fifteen minutes of the session. Some specialist terms are used in the vignette which are explained in more detail in this chapter and in the glossary.
+The purpose of this vignette is to illustrate some of the key features of the overall game making activity in context. The following vignette, consisting of extracts of participant activity over tweood bunch of phones to be worked on too in our devices
+cupboard if anyone fancies giving some a go today. I'll be there from
+11.30 todaynty minutes of a session in P2 (see below), shows activity happening at different scopes of activity. The participant, a child Toby, has been working independently on the design of a platform game for the first fifteen minutes of the session. Some specialist terms are used in the vignette which are explained in more detail in this chapter and in the glossary.
 
 The vignette is included as an appendix of this chapter as Appendix 4.a -
 [Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit)
@@ -414,12 +412,13 @@ A later section of this chapter details the different supporting documentation g
 
 <!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
 
-While the previous section focused on a mid-level objective of adding or altering game features (also referred to as game design patterns here), implementing more complicated patterns involved several stages and varied tools. Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby undertakes certain chains of processes in a fluid way that shows that actions had become operations. An example of such an operation is his quick navigation between different areas of the game code, the game preview window and other sources of documentation. In contrast, some tasks are new to Toby and are performed more hesitantly. At times in extract above, Toby is careful and hesitant, checking and rechecking the process of copying and pasting new code into his game from a specially prepared code example.
+Within the objective of adding or altering game features (also referred to as game design patterns here), implementing more complicated patterns involved several stages and varied tools. Using the terminology of Leontiev [-@leontiev_activity_2009], participants undertakes certain chains of processes in a fluid way that shows that actions had become operations (as explored in chapter three). In vignette 4.x, an example of such an operation is Toby's quick navigation between different areas of the game code, the game preview window and other sources of documentation. In contrast, some tasks are new to Toby and are performed more hesitantly. In the vignette's description, it can be observed that at times Toby is careful and hesitant, checking and rechecking the process of copying and pasting new code into his game from the code example of a design pattern he has chosen.
 
 <!--NOTE As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers. -->
 
+Identifying shifts in participant activity in terms of scope facilitates analysis of the complex and interwoven cultural, social and personal actions in a communities activity [@rogoff_observing_1995]. Above, Toby shifts between the wider activity of making a game and sharing it with peers and narrower actions implementing concrete code structures. This aspect is developed in chapter five.
 
-Identifying shifts in participant activity in terms of scope facilitates analysis of the complex and interwoven cultural, social and personal actions in a communities activity [@rogoff_observing_1995]. Above, Toby shifts between the wider activity of making a game and sharing it with peers and narrower actions implementing concrete code structures. This aspect is developed in chapter five. In addition to these shifts in scope, analysis of community processes also involves transformation over time.  The next section offers a description of the evolution of tool use in different phases of the study with an aim to situate analysis of emerging tensions in the use of tools, resources and processes in the following section.
+In addition to these shifts in scope, analysis of community processes also involves transformation over time.  The next section offers a description of the evolution of tool use in different phases of the study with an aim to situate analysis of emerging tensions in the use of tools, resources and processes in the following section.
 
 
 <!-- In this thesis, chapter six has a focus on cultural aspects of making a game together and chapter five explores social organisation around the activity of adding game design patterns chapter five.  -->
@@ -446,23 +445,13 @@ NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and 
 <!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
 
 
+#### Applying activity theory to surface contradictions and design tensions experienced by participants and facilitator/s
+
+The followings sections use a process of analysis of contradictions between system elements of the activity systems outlined above. The processes is a formative intervention (explored in chapter three) in that the surfacing of tensions due to changes in the learning design over time are examined. As noted in the introduction, this chapter explores the following areas of contradictions: contradictions in the technical tool use of design, contradictions shaping the development of supporting documentation, contradictions to do with issues of identity and the cultural dimension of participation.
+
+<!-- I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. -->
 
 
-## Conflicts and design tensions experienced by participants and facilitator/s
-
-
-This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The term conflict here is used to describe a more serious break down of activity due to an accumulation of contradictions and tensions.
-
-The processes here aligns with AT approach of formative interventions in that the surfacing of tensions due to changes in the learning design over time are examined. I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002].
-
-As such, this chapter explores the following areas of tensions and barriers.  
-NOTE - (be clearer on terms still)
-
-- contradictions in the tool set of the early design.
-
-- contradictions which stimulated the development of authoring tools and supporting documentation.
-
-- issues of identity and interventions designed to mitigate cultural barriers of participation.
 
 
 <!-- In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways. -->
@@ -578,25 +567,22 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 <!-- In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010]. -->
 
-Conflicts arose due to a contradictions between the desire of participants to use the tools to create games and their lack of experience of them.
-FINESSE THIS WITH MORE DETAIL - accumulation
+Activity theory has a broad definition of the concept of tool which in this context would include the use of language, concepts, supporting resources and production processes. While forms of documentation and supporting resources are explored in the following section, this section focuses on software tools and code framework used to create games in this program.    
 
-The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools.
+Contradictions arose between the need of participants to use key tools to create games and their lack of experience of them. Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. While this is to be expected given the novice status of the participants, contextual factors complicate this contradiction further. For example, the process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools (explored in the introduction).
 
-Activity theory has a broad definition of the concept of tool which in this context would include the use of language, concepts, supporting resources and production processes. This section focuses on software tools used to create games in this program and technical process needed within those applications.  
+While, gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting encouraged me to prioritise approaches which avoided written or to whole class instruction. My motivations here were also supported by experiences in P1 documented in my journal. I found attempts to convene attention on a presentation screen for instruction based teaching to class uncomfortable, stemming from my judgement that these interventions to be unwelcome interruptions for the participants making activities.  
 
-Thus crux of the conflict is that coding games to create a webpage using a text environment is a complex process. While some of the group had some experience, many did not. In early stages, this gulf created a tension between the need to use the tools and text coding processes which often resulted in frustration and paralysis in the activity of game coding. While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting, and early experiences where I found instruction based teaching uncomfortable, encouraged me to prioritise approaches which avoided written or to whole class instruction.
 
 The resulted in a design challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
 
  <!-- namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. -->
 
-The motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience [@shaffer_thick_1999; @warr_bridging_2020]. While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools. In part my motivation for choice of code language (Javascript, Phaser) was driven by desire to align with common workplace practices and to be potentially extensible for future student-led web projects.
+
 <!-- As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch.  -->
 
 <!-- A common question for this research is why not use Scratch (see LR / Glossary)? While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set.   -->
 
-By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. The following section outlines responsive design process surrounding two main elements: the starting game code template and the code authoring toolset.
 
 
 <!-- NOTE INTEGREATE HOW DESIGNING FOR AUTHENITITY IS A CHALLENGE HERE WHICH IS ALIGNED WITH PBL AND EXPERIENTIAL THEORY, FORESHADOW SHARED DIMENTIONS OF AUTHENTICITY WHICH ARE EXPLORED LATER. -->
@@ -608,9 +594,13 @@ By P2, learners first experience of the experience of the tools was in the proce
 
 
 
-### Design choices of the starter game template
+### Using a starter game template
 
 FOCUS ON THE TENSION FIRST AND SHIFT FROM P1 -> P2
+
+By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. The following section outlines responsive design process surrounding two main elements: the starting game code template and the code authoring toolset.
+
+
 
 The initial use of a working structural template was an intuitive response based on my own experience of teaching technology. The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in part two of this section had more hands on play and use of the tools of production before being called on to make creative decision, likening this to an arts studio approach.
 
@@ -618,7 +608,7 @@ I realised that to allow for this playful experimentation, a purely structural t
 
 <!-- The following section describes designs decisions relevant to the evolution of this starting template by drawing on concepts explored in the literature review, namely: UMC approaches; constructionist design heuristics; and the domain of human-computer interaction (HCI) research. In particular, I explore the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].   -->
 
-#### Structural design of the game template
+**Structural design of the game template**
 
 
 
@@ -679,6 +669,9 @@ A later discussion section in this chapter illustrates a more complex interactio
 To accelerate and support the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. These include changing gravity, altering the player jump height and walking speed.
 
 ![](./Pictures/simple_game_template_3a.png){width=95%}
+
+![simple game template]({{ site.baseurl }}/Pictures/simple_game_template_3a.png)
+
 4.x glitch coding environment with code structure of left menu, a central code window with code, comments and game preview on the right.
 
 The starting template began with the game in a broken state thus inviting players to modify the game to fix it. The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code (see Figure above). In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
