--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -4,11 +4,8 @@
         2024](#research-questions---april-2024)
     -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
-    -   [Detailed description of dimensions of game making
-        activity](#detailed-description-of-dimensions-of-game-making-activity)
-        -   [Illustrative vignette one participants activity indicating
-            general activity of
-            participants](#illustrative-vignette-one-participants-activity-indicating-general-activity-of-participants)
+    -   [Analysis of dimensions of game making activity using 3GAT
+        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
         -   [Description of interacting systems of activity illustrated
             using the
             vignette](#description-of-interacting-systems-of-activity-illustrated-using-the-vignette)
@@ -21,11 +18,12 @@
             -   [Smaller objectives and actions - Implementing discrete
                 code and design
                 structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
-    -   [Conflicts and design tensions experienced by participants and
-        facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Tensions due to lack of access and familiarity to game
-        programming
-        tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
+            -   [Applying activity theory to surface contradictions and
+                design tensions experienced by participants and
+                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
+    -   [Contradictions involving the use of game programming and asset
+        authoring
+        tools](#contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
         -   [Design choices of the starter game
             template](#design-choices-of-the-starter-game-template)
             -   [Structural design of the game
