--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -668,7 +668,7 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 To accelerate and support the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. These include changing gravity, altering the player jump height and walking speed.
 
-![](./Pictures/simple_game_template_3a.png){width=95%}
+![simple game template](./Pictures/simple_game_template_3a.png){width=95%}
 
 ![simple game template]({{ site.baseurl }}/thesis_chapters/Pictures/simple_game_template_3a.png)
 
