--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -670,7 +670,7 @@ To accelerate and support the experimentation of users, I identified changes to 
 
 ![simple game template](./Pictures/simple_game_template_3a.png){width=95%}
 
-![simple game template]({{ site.baseurl }}/thesis_chapters/Pictures/simple_game_template_3a.png)
+![simple game template web]({{ site.baseurl }}/thesis_chapters/Pictures/simple_game_template_3a.png)
 
 4.x glitch coding environment with code structure of left menu, a central code window with code, comments and game preview on the right.
 
