--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -615,6 +615,18 @@ I realised that to allow for this playful experimentation, a purely structural t
 A web code project using the chosen game framework
 phaser consists of several interlinked files of Javascript, HTML and CSS and image files. (see glossary & appendix 4.x)
 
+![simple game template](./Pictures/simple_game_template_3a.png){width=95%}
+
+![simple game template web]({{ site.baseurl }}/Pictures/simple_game_template_3a.png)
+
+4.x glitch coding environment with code structure of left menu, a central code window with code, comments and game preview on the right.
+
+![simple game template](./Pictures/illustrations/template_annot.png){width=95%}
+Annoated
+
+
+While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js (See Figure 4.x)
+
 <!-- Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023]. Phaser starting templates available from the website share this aim of providing scaffolding by providing a downloadable zip of files which when extracted are already interlinked correctly [^5].
 
 Game states and functions to create the game loop (see glossary) are included natively in the phaser framework [@faas_introduction_2017]. Game states allow designers to deconstruct games and game code into collections of sub-units (states)   [@kostolny_digital_2017]. For example a simple arcade games may only had an insert coin state, a play state and a game over state. A game coding framework like phaser shields its users from code complexity by providing a game state manager and associated functions out-of-the-box, meaning that lots of underlying code is already written and hidden from view. To increase simplicity for my participants the starting template I created had only one game state called _PlayState_. It followed the following structure: a beginning section out side of a function declaring variables; a preload function which loads assets into the game; a create function which sets up the initial game; an update function which listens to and responds to user input. The following illustration from the step-based instructions illustrates the structure for participants, including the possibility to create new game states e.g. a game over state.
@@ -623,7 +635,7 @@ Game states and functions to create the game loop (see glossary) are included na
 
 4.x - Game states and function structure explained in the Glitch Game Makers manual created for for P2 and P3 -->
 
-While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js (See Figure 4.x below)
+
 
 
 <!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
@@ -668,11 +680,7 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 To accelerate and support the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. These include changing gravity, altering the player jump height and walking speed.
 
-![simple game template](./Pictures/simple_game_template_3a.png){width=95%}
 
-![simple game template web]({{ site.baseurl }}/thesis_chapters/Pictures/simple_game_template_3a.png)
-
-4.x glitch coding environment with code structure of left menu, a central code window with code, comments and game preview on the right.
 
 The starting template began with the game in a broken state thus inviting players to modify the game to fix it. The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code (see Figure above). In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
 
